--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -74,6 +74,10 @@ services:
           memory: 16G
         reservations:
           memory: 4G
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu, compute, utility]
 
 # Named volume for persistent bash history
 volumes:
